# AIagentOS

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.kiro/specs/ai-agent-os/: .config.kiro  design.md  requirements.md  tasks.md
benchmarks/: Cargo.toml  agent_bench.rs  os_benchmark.rs  os_demo.rs  run_swebench.py  stress_test.rs  swebench_results.json
crates/adapters/: Cargo.toml
crates/adapters/src/: anthropic.rs  anthropic_tests.rs  azure_openai.rs  deepseek.rs  deepseek_tests.rs  gemini.rs  gemini_tests.rs  groq.rs  groq_tests.rs  huggingface.rs  huggingface_tests.rs  lib.rs  local.rs  on_device.rs  openai.rs  openai_tests.rs  streaming.rs  vllm.rs  vllm_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: logging.rs  main.rs  policy_cmd.rs  providers.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: agent.rs  agent_hub.rs  agent_package.rs  agent_sockets.rs  agent_struct.rs  agent_syscalls.rs  agentctl.rs  agentpkg.rs  agentps.rs  auth.rs  budget.rs  cfs.rs  cgroups.rs  config.rs  connector.rs  context.rs  context_paging.rs  custom_tools.rs  database.rs  delegation.rs  docker_sandbox.rs  editing.rs  event_loop.rs  execution.rs  function_calling.rs  github.rs  indexer.rs  init_system.rs  ipc.rs  learning.rs  lib.rs  linux_compat.rs  llm_sched.rs  mac.rs  marketplace.rs  mcp.rs  mcp_server.rs  memory_manager.rs  metrics.rs  models.rs  (+30 more)
crates/resources/: Cargo.toml
crates/resources/src/: application.rs  browser.rs  filesystem.rs  lib.rs  network.rs  peripheral.rs  playwright.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: cluster.rs  lib.rs  patterns.rs
crates/sdk/tests/: cluster.rs  kernel_client.rs  patterns.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/src/: commands.rs  main.rs
crates/tauri-app/ui/: index.html  package-lock.json  package.json  vite.config.js
crates/tauri-app/ui/src/: App.svelte
crates/tauri-app/ui/src/lib/: ActivityFeed.svelte  AgentDetail.svelte  ChatPanel.svelte  Dashboard.svelte  Settings.svelte  SetupModal.svelte  Sidebar.svelte
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  main.rs
crates/tui/tests/: refresh.rs
docker/: entrypoint.sh
docs/: .gitignore  AGENT_PACKAGE.md  AIOS_PARITY_BACKLOG.md  ARCHITECTURE.md  COMPLETE_SPEC.md  FULL_ROADMAP.md  PLATFORM_ROADMAP.md  POLICY.md  README.md  RUNBOOK.md  SERVER_QUICKSTART.md  book.toml
docs/src/: SUMMARY.md  agent-package.md  architecture.md  complete-spec.md  concepts.md  full-roadmap.md  getting-started.md  introduction.md  platform-roadmap.md  runbook.md  syscall-gate.md
docs/src/tutorials/: custom-tools.md  service-files.md
docs/tutorials/: custom-tools.md  getting-started.md  service-files.md
examples/: Cargo.toml  cli_test.rs
modules/example-tool/: Cargo.toml  README.md  manifest.toml
modules/example-tool/src/: lib.rs
scripts/: quickstart.sh
tests/: Cargo.toml
tests/src/: agent_lifecycle_props.rs  agent_package_e2e.rs  connector_props.rs  context_props.rs  e2e_pipeline.rs  edge_cases.rs  gate_adversarial_props.rs  governance_e2e.rs  ipc_props.rs  lib.rs  memory_props.rs  module_props.rs  notification_props.rs  observability_props.rs  os_enforcement.rs  permission_props.rs  persistence_props.rs  policy_props.rs  prerequisite_props.rs  sandbox_props.rs  scheduler_props.rs  shutdown_props.rs  tenancy_props.rs
vscode-extension/: package.json
vscode-extension/src/: extension.ts
