[workspace]
members = [
    "crates/kernel",
    "crates/adapters",
    "crates/resources",
    "crates/tauri-app",
    "crates/cli",
    "crates/sdk",
    "crates/tui",
    "tests",
    "examples",
    "benchmarks",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio-tungstenite = "0.24"
wasmtime = "27"
dashmap = "6"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
proptest = "1"
wiremock = "0.6"
tauri = "2"
tauri-build = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5"
scraper = "0.20"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# SHA-256 for hashing auth secrets (API keys / session tokens) at rest. Already
# in the dependency tree via rustls/rcgen (the "ring" feature above), so this
# adds no new transitive weight — it just exposes `ring::digest` to the kernel.
ring = "0.17"
