[package]
name = "os-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "os-benchmark"
path = "os_benchmark.rs"

[[bin]]
name = "stress-test"
path = "stress_test.rs"

[[bin]]
name = "os-demo"
path = "os_demo.rs"

[[bin]]
name = "agent-bench"
path = "agent_bench.rs"

[dependencies]
kernel = { path = "../crates/kernel" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
