[package]
name = "os-benchmark"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "os-benchmark"
path = "os_benchmark.rs"

[[bin]]
name = "stress-test"
path = "stress_test.rs"

[[bin]]
name = "os-demo"
path = "os_demo.rs"

[[bin]]
name = "agent-bench"
path = "agent_bench.rs"

[[bin]]
name = "governance-demo"
path = "src/bin/governance-demo.rs"

[dependencies]
kernel = { path = "../crates/kernel" }
adapters = { path = "../crates/adapters" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
