[package]
name = "cli-test"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "cli-test"
path = "cli_test.rs"

[dependencies]
kernel = { path = "../crates/kernel" }
adapters = { path = "../crates/adapters" }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
