[package]
name = "integration-tests"
version = "0.3.0"
edition = "2021"

[lib]
name = "integration_tests"
path = "src/lib.rs"

[dependencies]
kernel = { path = "../crates/kernel" }
adapters = { path = "../crates/adapters" }
resources = { path = "../crates/resources" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
wiremock = { workspace = true }
futures = "0.3"
rusqlite = { workspace = true }
