[package]
name = "adapters"
version = "0.3.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = "0.1"
futures-core = "0.3"
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
wiremock = { workspace = true }
