[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
kernel = { path = "../kernel" }
adapters = { path = "../adapters" }
tokio = { version = "1", features = ["full"] }
dirs = "5"
libc = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
