[package]
name = "agent-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[features]
default = []
# Enable in-process GGUF inference (`llm_provider = "on-device"`). Forwards to
# the adapters `candle` feature; off by default so the shipped binary stays slim.
candle = ["adapters/candle"]

[dependencies]
kernel = { path = "../kernel" }
adapters = { path = "../adapters" }
tokio = { version = "1", features = ["full"] }
dirs = "5"
libc = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
