[package]
name = "kernel"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
tokio-util = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
futures-core = "0.3"
libc = "0.2"
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rcgen = { workspace = true }
