[package]
name = "agent-sdk"
version = "0.1.0"
edition = "2021"
description = "Embeddable Rust SDK for building agents against the AI Agent OS kernel over its syscall server."
license = "AGPL-3.0"

[dependencies]
kernel = { path = "../kernel" }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
