[package]
name = "agent-sdk"
version = "0.3.0"
edition = "2021"
description = "Embeddable Rust SDK for building agents against the AI Agent OS kernel over its syscall server."
license = "AGPL-3.0"

[dependencies]
kernel = { path = "../kernel" }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
adapters = { path = "../adapters" }
wiremock = { workspace = true }
async-trait = { workspace = true }
rcgen = { workspace = true }
